--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                 </a>
 
 
-                <a class="container2" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container2" href="https://nameless-shelf-34042.herokuapp.com/" target="blank">
                     <img src="./images/salEar.jpg" alt="Salvador Dali placeholder.">
 
                     <div class="content2">
-                        <p>Project Two</p>
+                        <p>Anybody Can Cook</p>
                     </div>
 
                 </a>
