altered media qs

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 Email: 3gobenjamin@gmail.com<br>
                 GitHub: bennygo3<br>
                 Phone: (602)<br>
-                LinkedIn: <br>
+                LinkedIn: www.linkedin.com/in/benjamin-a-gomez <br>
                 Location: Austin, TX<br>
             </div>
 
