added more links to pictures and tidied up

--- a/index.html
+++ b/index.html
@@ -94,57 +94,57 @@
 
                 </a>
 
-                <a class="container3" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container3" href="https://github.com/bennygo3/WhereToWeather" target="blank">
                     <img src="./images/redfaced.jpeg" alt="Painting of a man.">
 
                     <div class="content3">
-                        <p>Project Three</p>
+                        <p>Where To Weather</p>
                     </div>
 
                 </a>
 
-                <a class="container4" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container4" href="https://github.com/bennygo3/SQLisDataBased" target="blank">
                     <img src="./images/warhol.jpeg" alt="Warhol painting">
 
                     <div class="content4">
-                        <p>Project Four</p>
+                        <p>SQLisDataBased</p>
                     </div>
 
                 </a>
                 <br>
 
-                <a class="container5" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container5" href="https://github.com/bennygo3/Object-Oriented-Profile" target="blank">
                     <img src="./images/Licht.jpeg" alt="Lichtenstein painting">
 
                     <div class="content5">
-                        <p>Project Five</p>
+                        <p>O-O-P</p>
                     </div>
 
                 </a>
 
-                <a class="container6" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container6" href="https://github.com/bennygo3/ORMeCommerce" target="blank">
                     <img src="./images/sunburst.jpeg" alt="Painting of the sun">
 
                     <div class="content6">
-                        <p>Project Six</p>
+                        <p>ORMeCommerce</p>
                     </div>
 
                 </a>
 
-                <a class="container7" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container7" href="https://github.com/bennygo3/README-generated" target="blank">
                     <img src="./images/closeUp.jpeg" alt="Zoomed in photo of a painting">
 
                     <div class="content7">
-                        <p>Project Seven</p>
+                        <p>README-generated</p>
                     </div>
 
                 </a>
 
-                <a class="container8" href="https://github.com/bennygo3/Work" target="blank">
+                <a class="container8" href="https://github.com/bennygo3/HardCoded" target="blank">
                     <img src="./images/paintbrushes.jpeg" alt="Image of paintbrushes">
 
                     <div class="content8">
-                        <p>Project Eight</p>
+                        <p>HardCoded</p>
                     </div>
 
                 </a>
@@ -163,11 +163,13 @@
             </div>
 
             <div id="contactInfo">
-                Email: 3gobenjamin@gmail.com<br>
-                GitHub: bennygo3<br>
-                Phone: (602)<br>
-                LinkedIn: www.linkedin.com/in/benjamin-a-gomez <br>
+                Email: <a href=mailto:gobecodeme@gmail.com> gobecodeme@gmail.com</a><br>
+                GitHub: <a href=https://github.com/bennygo3 target="blank"> bennygo3</a><br>
+                Phone: (602) 471-5651<br>
+                LinkedIn:<a href="https://www.linkedin.com/in/benjamin-a-gomez" target="blank"> Benjamin Gomez</a><br>
                 Location: Austin, TX<br>
+                <span id="disclaimer">(underlined are clickable)</span>
+                
             </div>
 
 
