added resume and updated about me

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 and have lived here since.<br>
                 <br>
 
-                I am currently enrolled in The Coding Boot Camp at UT<br>
-                Austin, but prior to that I worked in the healthcare<br>
-                industry as a licensed paramedic.<br>
+                I recently completed The Coding Boot Camp at UT<br>
+                Austin and I am now considered a Full Stack Developer!<br> 
+                Prior to that I worked in the healthcare industry<br>
+                as a licensed paramedic.<br>
                 <br>
 
                 In my spare time I enjoy playing sports, video<br>
@@ -164,9 +165,10 @@
 
             <div id="contactInfo">
                 Email: <a href=mailto:gobecodeme@gmail.com> gobecodeme@gmail.com</a><br>
+                Resume: <a href="BenjaminGomezResume.pdf">Benjamin's Resume</a><br>
                 GitHub: <a href=https://github.com/bennygo3 target="blank"> bennygo3</a><br>
                 Phone: (602) 471-5651<br>
-                LinkedIn:<a href="https://www.linkedin.com/in/benjamin-a-gomez" target="blank"> Benjamin Gomez</a><br>
+                LinkedIn: <a href="https://www.linkedin.com/in/benjamin-a-gomez" target="blank"> Benjamin Gomez</a><br>
                 Location: Austin, TX<br>
                 <span id="disclaimer">(underlined are clickable)</span>
                 
