changed up links

--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
                 </a>
 
 
-                <a class="container2" href="https://nameless-shelf-34042.herokuapp.com/" target="blank">
+                <a class="container2" href="https://decked--out.herokuapp.com/" target="blank">
                     <img src="./images/salEar.jpg" alt="Salvador Dali placeholder.">
 
                     <div class="content2">
-                        <p>Anybody Can Cook</p>
+                        <p>Decked-Out</p>
                     </div>
 
                 </a>
 
-                <a class="container3" href="https://github.com/bennygo3/WhereToWeather" target="blank">
+                <a class="container3" href="https://bennygo3.github.io/WhereToWeather/" target="blank">
                     <img src="./images/redfaced.jpeg" alt="Painting of a man.">
 
                     <div class="content3">
@@ -141,7 +141,7 @@
 
                 </a>
 
-                <a class="container8" href="https://github.com/bennygo3/HardCoded" target="blank">
+                <a class="container8" href="https://bennygo3.github.io/HardCoded/" target="blank">
                     <img src="./images/paintbrushes.jpeg" alt="Image of paintbrushes">
 
                     <div class="content8">
